Change-Id: I79c09e71a5ccb35f543c377a781033b6efdee6fb

--- a/web-boot/Dockerfile
+++ b/web-boot/Dockerfile
@@ -1,4 +1,4 @@
 FROM hub.c.163.com/xbingo/jdk8
-ADD ./target/web-boot-0.0.1.jar /web-boot.jr
+ADD ./target/web-boot-0.0.1.jar /web-boot.jar
 EXPOSE 8080
 CMD ["java","-jar","/web-boot.jar"]
